# CHPS0801_prj

./: .gitignore  README.md  algo.cpp
kokkos/: CMakeLists.txt  KokkosCore_config.tmp  Makefile  gauss_seidel.cpp  jacobi.cpp  jacobi.h  kokkos_jacobi.host  opencv_simple.cpp
kokkos/build-gpu/: CMakeCache.txt  Makefile  cmake_install.cmake  kokkos_jacobi
openmp/: Makefile  gauss_seidel.cpp  gauss_seidel.h  jacobi.cpp  jacobi.h  libopencv_imgcodecs.so.410  opencv_simple.cpp  opencv_test.pgr
